--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.18.1"
   }
 }
